--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.0",
-    "router": "^2.2.0",
+    "react-router-dom": "^7.4.2",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
