--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.0",
-    "router": "^2.2.0",
-    "tailwind": "^4.0.0"
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -26,7 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.2.4"
   }
 }
