--- a/Adminservice/package.json
+++ b/Adminservice/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "framer-motion": "^12.31.0",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
