--- a/ShopSphere_Frontend/package.json
+++ b/ShopSphere_Frontend/package.json
@@ -15,13 +15,13 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.13.0",
-    "router": "^2.2.0",
-    "router-dom": "^3.0.3"
+    "react-router-dom": "^7.1.3",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
