--- a/ShopSphere_Frontend/package.json
+++ b/ShopSphere_Frontend/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.7.9",
-    "papaparse": "^5.5.3",
     "framer-motion": "^12.33.0",
     "lucide-react": "^0.563.0",
+    "papaparse": "^5.5.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
