--- a/ShopSphere_Frontend/package.json
+++ b/ShopSphere_Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.13.4",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.7.9",
     "framer-motion": "^12.33.0",
